--- a/SportsSideKick/app/src/main/res/layout/fragment_chat_create.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat_create.xml
@@ -8,33 +8,35 @@
     android:clickable="true"
     android:orientation="vertical">
 
+    <!--Status bar background-->
     <View
-        android:id="@+id/topSpacer"
+        android:id="@+id/statusBarBackground"
         android:layout_width="match_parent"
         android:layout_height="24dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/gradient_black_to_transparent"
         tools:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/chat_headline_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:layout_below="@id/topSpacer"
-        android:background="@color/colorPrimary"
+        android:layout_below="@id/statusBarBackground"
         android:clickable="true"
         android:tileMode="repeat"
-        android:visibility="gone">
+        android:visibility="visible">
 
-        <android.support.v7.widget.AppCompatImageButton
-            android:id="@+id/chat_headline_close_fragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:background="@null"
-            android:src="?closeIcon"
-            android:tint="@color/colorPrimaryVeryLight"
-            android:visibility="gone" />
+        <ImageButton
+            android:id="@+id/backButton"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="@dimen/standard_button_height"
+            android:layout_height="@dimen/standard_button_height"
+            android:layout_alignParentBottom="true"
+            android:adjustViewBounds="true"
+            android:alpha="0.7"
+            android:padding="8dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
+            android:tint="@color/colorPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,7 +46,7 @@
             android:gravity="center"
             android:padding="@dimen/padding_8"
             android:text="@string/chat"
-            android:textColor="?popupsCaptionColor" />
+            android:textColor="@color/colorPrimary" />
 
     </RelativeLayout>
 
@@ -66,49 +68,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_1"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="48dp"
-                android:background="@color/colorPrimaryVeryLight">
+                android:layout_marginTop="40dp">
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="4dp"
                     android:layout_marginEnd="@dimen/margin_1"
                     android:layout_weight="1"
-                    android:background="?colorAccent" />
+                    android:background="#19000000" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="4dp"
-                    android:layout_marginEnd="@dimen/margin_1"
-                    android:layout_weight="1"
-                    android:background="@color/colorPrimaryVeryLight" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="4dp"
-                    android:layout_weight="1"
-                    android:background="@color/colorPrimaryVeryLight"
-                    android:visibility="gone" />
             </LinearLayout>
             <!-- TOP BUTTONS CONTAINER -->
             <LinearLayout
                 android:id="@+id/top_container_linear"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/standard_button_height"
+                android:layout_height="40dp"
                 android:layout_alignParentStart="true"
                 android:layout_below="@id/top_buttons_container"
                 android:background="@color/colorPrimary"
                 android:orientation="horizontal">
-
-                <ImageButton
-                    android:id="@+id/backButton"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="@dimen/standard_button_height"
-                    android:layout_height="@dimen/standard_button_height"
-                    android:layout_alignParentBottom="true"
-                    android:alpha="0.75"
-                    android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
-                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/textView3"
@@ -116,14 +94,10 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/margin_1"
                     android:layout_weight="1"
+                    android:background="@color/colorPrimary"
                     android:gravity="center"
                     android:text="@string/chat_create"
                     android:textColor="@color/white" />
-
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="#19000000" />
 
                 <TextView
                     android:id="@+id/join_a_chat"
@@ -131,9 +105,11 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/margin_1"
                     android:layout_weight="1"
+                    android:background="@color/white"
+                    android:foreground="?selectableItemBackground"
                     android:gravity="center"
                     android:text="@string/join_chat"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/colorPrimary" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -193,7 +169,7 @@
             android:layout_below="@id/top_container"
             android:layout_toEndOf="@id/chat_image_view"
             android:layout_toStartOf="@+id/chat_popup_image_button"
-            android:background="@color/chatBackground"
+            android:background="#e9eaee"
             android:gravity="start|center_vertical"
             android:hint="@string/chat_give_name"
             android:imeOptions="flagNoExtractUi"
@@ -201,8 +177,8 @@
             android:maxLines="1"
             android:padding="@dimen/margin_15"
             android:textColor="@color/black"
-            android:textColorHint="@color/black_alpha_70"
-            android:textSize="16sp"
+            android:textColorHint="#686868"
+            android:textSize="14sp"
             tools:textStyle="bold" />
 
         <ImageButton
@@ -265,8 +241,8 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="@dimen/margin_10"
             android:layout_marginEnd="16dp"
+            android:layout_marginStart="@dimen/margin_10"
             android:layout_toEndOf="@+id/private_chat_switch"
             android:gravity="end|center_vertical"
             android:text="@string/chat_public"
