--- a/SportsSideKick/app/src/main/res/layout-large/fragment_chat_create.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_chat_create.xml
@@ -25,7 +25,7 @@
             android:clickable="true">
 
             <ImageButton
-                android:id="@+id/chat_headline_close_fragment"
+                android:id="@+id/backButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
