--- a/SportsSideKick/app/src/main/res/layout/fragment_club_tv.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_tv.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryMediumLight"
+    android:background="@color/white"
     tools:context=".ui.fragment.stream.ClubTVFragment">
 
     <android.support.percent.PercentRelativeLayout
