--- a/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@id/youtube_layout_container"
-        android:background="@color/colorPrimary">
+        android:background="#f4f4f4">
 
         <ImageView
             android:id="@+id/play_button"
@@ -47,6 +47,7 @@
             android:layout_height="@dimen/height_40"
             android:layout_centerVertical="true"
             android:padding="@dimen/padding_10"
+            android:tint="@color/colorPrimary"
             android:src="?playPauseSelector" />
 
         <TextView
@@ -57,7 +58,7 @@
             android:layout_toRightOf="@id/play_button"
             android:lines="1"
             android:padding="@dimen/padding_8"
-            android:textColor="?colorGray"
+            android:textColor="@color/black"
             android:textSize="@dimen/font_size_12"
             tools:text="00:00 / 00:00"
             android:layout_toEndOf="@id/play_button" />
@@ -69,6 +70,7 @@
             android:layout_toLeftOf="@id/fullscreen_button"
             android:button="@null"
             android:gravity="center"
+            android:tint="@color/colorPrimary"
             android:padding="@dimen/padding_10"
             android:src="?soundSelector"
             android:thumb="@null"
@@ -80,8 +82,8 @@
             android:layout_height="@dimen/height_40"
             android:layout_alignParentRight="true"
             android:padding="@dimen/padding_10"
+            android:tint="@color/colorPrimary"
             android:src="@drawable/full_screen_icon"
-            android:tint="@color/white"
             android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
