opening edit profile screen on click of avatar

--- a/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
@@ -183,6 +183,7 @@
                             android:layout_centerHorizontal="true"
                             android:layout_centerVertical="true"
                             android:scaleType="fitXY"
+                            android:foreground="?selectableItemBackground"
                             tools:src="?profileImageIcon" />
 
                     </RelativeLayout>
