--- a/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/width_60"
     android:layout_height="60dp">
@@ -20,8 +19,8 @@
         android:id="@+id/notification_icon"
         android:layout_width="@dimen/width_15"
         android:layout_height="@dimen/height_15"
-        android:layout_centerVertical="true"
-        android:layout_margin="@dimen/margin_5"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="@dimen/margin_5"
         android:src="?chatNotificationIcon"
         tools:visibility="visible"
         android:visibility="gone" />
