--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -25,7 +25,7 @@
             android:orientation="vertical"
             android:paddingBottom="4dp">
 
-            <TextView
+            <android.support.text.emoji.widget.EmojiTextView
                 android:id="@+id/text_content"
                 fontPath="fonts/TitilliumWeb-Bold.ttf"
                 android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                 tools:text="@string/lorem_ipsum"
                 tools:textStyle="bold" />
 
-            <TextView
+            <android.support.text.emoji.widget.EmojiTextView
                 android:id="@+id/subheadTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
