--- a/SportsSideKick/app/src/main/res/drawable/textview_round_border.xml
+++ b/SportsSideKick/app/src/main/res/drawable/textview_round_border.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/black" />
-    <corners android:radius="@dimen/margin_60" />
+    <corners android:radius="15dp" />
 </shape>
