--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -26,6 +26,8 @@
 
         <TextView
             android:id="@+id/text"
+            fontPath="fonts/TitilliumWeb-SemiBold.ttf"
+            tools:textStyle="bold"
             android:layout_width="wrap_content"
             android:lineSpacingMultiplier="0.9"
             android:layout_marginEnd="4dp"
